# themectl

./: .gitignore  README.md  pyproject.toml
themectl/: main.py
themes/: catppuccin.toml  dracula.toml  everforest.toml  gruvbox.toml  onedark.toml  tokyonight.toml
