[build-system]
requires      = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "themectl"
version     = "0.1.0"
description = "Unified theme switcher for alacritty, vim, bat, vivid/eza"
requires-python = ">=3.11"
# If on Python < 3.11, also install: tomli
# dependencies = ["tomli; python_version < '3.11'"]

[project.scripts]
themectl = "themectl.main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["../themes/*.toml"]
